fixed scrollbar

--- a/mailhubclient/src/app/globals.css
+++ b/mailhubclient/src/app/globals.css
@@ -64,3 +64,32 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+
+/* Define scrollbar colors for light mode */
+.light {
+  --scrollbar-bg: #f1f1f1;
+  --scrollbar-thumb: #888;
+}
+
+/* Define scrollbar colors for dark mode */
+.dark {
+  --scrollbar-bg: #333;
+  --scrollbar-thumb: #555;
+}
+
+/* Apply scrollbar styles */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--scrollbar-bg);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb);
+  border-radius: 8px;
+}
